[package]
name = "reqex"
version = "0.1.0"
authors = ["reqty"]
edition = "2018"

[profile.release]
lto = "thin"
panic = "abort"

[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = [ "macros" ] }
#telegram-bot = "0.7"
telegram-bot = { git = "https://github.com/ayrat555/telegram-bot", branch = "ayrat555/api-fixes-10" }
regex = "1"
unicode-segmentation = "1"
