[package]
name = "reqex"
version = "0.1.0"
authors = ["reqty"]
edition = "2018"

[profile.release]
lto = "thin"
panic = "abort"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
frankenstein = { version = "0.30", default-features = false, features = ["async-http-client"] }
lazy_static = "1"
regex = "1"
sedregex = "0.2.5"
enum_dispatch = "0.3.12"
async-trait = "0.1.77"
